<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp">

            <View android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:background="@color/colorPrimaryDark"/>

            <Button android:id="@+id/nav_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="29"
                    android:text="@string/menu_home"
                    android:textAllCaps="false"
                    android:paddingLeft="20dp"
                    android:background="@android:color/white"
                    android:paddingStart="20dp"
                    android:gravity="center_vertical"
                    tools:ignore="RtlSymmetry"
                    android:drawableRight="@drawable/arrow_forward"
                    android:drawableEnd="@drawable/arrow_forward"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp">

            <View android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:background="@color/colorPrimaryDark"/>

            <Button android:id="@+id/nav_current"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="29"
                    android:text="@string/menu_current"
                    android:textAllCaps="false"
                    android:paddingLeft="20dp"
                    android:background="@android:color/white"
                    android:paddingStart="20dp"
                    android:gravity="center_vertical"
                    tools:ignore="RtlSymmetry"
                    android:drawableRight="@drawable/arrow_forward"
                    android:drawableEnd="@drawable/arrow_forward"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp">

            <View android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:background="@color/colorPrimaryDark"/>

            <Button android:id="@+id/nav_archive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="29"
                    android:text="@string/menu_archive"
                    android:textAllCaps="false"
                    android:paddingLeft="20dp"
                    android:background="@android:color/white"
                    android:paddingStart="20dp"
                    android:gravity="center_vertical"
                    tools:ignore="RtlSymmetry"
                    android:drawableRight="@drawable/arrow_forward"
                    android:drawableEnd="@drawable/arrow_forward"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp">

            <View android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:background="@color/colorPrimaryDark"/>

            <Button android:id="@+id/nav_announcement"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="29"
                    android:text="@string/menu_announcement"
                    android:textAllCaps="false"
                    android:paddingLeft="20dp"
                    android:background="@android:color/white"
                    android:paddingStart="20dp"
                    android:gravity="center_vertical"
                    tools:ignore="RtlSymmetry"
                    android:drawableRight="@drawable/arrow_forward"
                    android:drawableEnd="@drawable/arrow_forward"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true">

        <View android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="2"
              android:background="@color/colorPrimaryDark"/>

        <View android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:background="@color/bg_yellow_main"/>
    </LinearLayout>
</RelativeLayout>