<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:id="@+id/main_container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress_bsr_current"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tv_current_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAlignment="center"/>

    <android.support.v4.widget.NestedScrollView
            android:layout_above="@+id/current_footer"
            android:id="@+id/current_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".ui.archive.ArchiveFragment"
                android:background="@android:color/white">

            <TextView
                    android:id="@+id/archive_tv_journal_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/archive_main_title"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/padding_side_title"
                    android:paddingRight="@dimen/padding_side_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/title"
                    android:paddingLeft="@dimen/padding_side_title"
                    android:background="@color/dark_transparent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:background="#706F6F"
                    app:layout_constraintTop_toBottomOf="@+id/archive_tv_journal_title"
                    app:layout_constraintBottom_toTopOf="@+id/archive_tv_frontpage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/archive_subtitle"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/padding_side_title"
                    android:paddingRight="@dimen/padding_side_title"
                    android:text="@string/front_page"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/title"
                    android:paddingLeft="@dimen/padding_side_title"
                    android:background="@color/dark_transparent"
                    app:layout_constraintTop_toBottomOf="@+id/archive_tv_journal_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:id="@+id/archive_tv_frontpage"/>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/archive_rv_frontpage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/archive_tv_frontpage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/archive_subtitle"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/padding_side_title"
                    android:paddingRight="@dimen/padding_side_title"
                    android:text="@string/articles"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/title"
                    android:paddingLeft="@dimen/padding_side_title"
                    android:background="@color/dark_transparent"
                    tools:layout_editor_absoluteX="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/archive_rv_frontpage"
                    android:id="@+id/archive_tv_articles"/>


            <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/archive_tv_articles"
                    android:id="@+id/current_rv_articles"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/archive_subtitle"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/padding_side_title"
                    android:paddingRight="@dimen/padding_side_title"
                    android:text="@string/back_pages"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/title"
                    android:paddingLeft="@dimen/padding_side_title"
                    android:background="@color/dark_transparent"
                    app:layout_constraintTop_toBottomOf="@+id/current_rv_articles"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/archive_tv_backpages"/>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/archive_rv_backpages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/archive_tv_backpages"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/archive_subtitle"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/padding_side_title"
                    android:paddingRight="@dimen/padding_side_title"
                    android:text="@string/full_paper"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/title"
                    android:paddingLeft="@dimen/padding_side_title"
                    android:background="@color/dark_transparent"
                    tools:layout_editor_absoluteX="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/archive_rv_backpages"
                    android:id="@+id/archive_tv_full_paper"/>

            <LinearLayout
                    layout="@layout/current_main"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    tools:layout_editor_absoluteX="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/archive_tv_full_paper">

                <android.support.v7.widget.RecyclerView
                        android:id="@+id/archive_rv_fullpaper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout_editor_absoluteX="0dp"
                        app:layout_constraintTop_toBottomOf="@+id/archive_tv_backpages"/>

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <include
            android:id="@+id/current_footer"
            layout="@layout/footer"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/footer_height"/>
</RelativeLayout>